--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,61 @@
         "node_modules",
         ".git",
         "venv"
-    ]
+    ],
+    "commentAnchors.showCursor": true,
+    "commentAnchors.tags.anchors": {
+
+        "ANCHOR": {
+            "iconColor": "default",
+            "highlightColor": "#A8C023",
+            "scope": "file"
+        },
+        "TODO": {
+            "iconColor": "blue",
+            "highlightColor": "#3ea8ff",
+            "scope": "workspace"
+        },
+        "FIXME": {
+            "iconColor": "red",
+            "highlightColor": "#F44336",
+            "scope": "workspace"
+        },
+        "STUB": {
+            "iconColor": "purple",
+            "highlightColor": "#BA68C8",
+            "scope": "file"
+        },
+        "NOTE": {
+            "iconColor": "orange",
+            "highlightColor": "#FFB300",
+            "scope": "file"
+        },
+        "REVIEW": {
+            "iconColor": "green",
+            "highlightColor": "#64DD17",
+            "scope": "workspace"
+        },
+        "SECTION": {
+            "iconColor": "blurple",
+            "highlightColor": "#896afc",
+            "scope": "workspace",
+            "behavior": "region"
+        },
+        "LINK": {
+            "iconColor": "#2ecc71",
+            "highlightColor": "#2ecc71",
+            "scope": "workspace",
+            "behavior": "link"
+        },
+        "CLASS":{
+            "scope": "workspace",
+            "behavior": "region",
+            "highlightColor": "#2ecc71"
+        },
+        "METHOD":{
+            "scope": "workspace",
+            "behavior": "region",
+            "highlightColor": "#2ecc71"
+        }
+    }
 }
