--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,3 +44,24 @@ email = "FitzzTeXnikWelt@t-online.de"
 
 [tool.ruff]
 line-length = 120
+
+[tool.pytest.ini_options]
+# Pytest-Optionen für die Testausführung
+minversion = "7.0"
+addopts = "--doctest-glob=get_started_*.rst"
+testpaths = [
+    "doc/source/devel", # Durchsucht Ihr Dokumentationsverzeichnis nach .rst-Dateien
+    "tests",            # Durchsucht das Unit-Test-Verzeichnis (für test_*.py)
+]
+
+[tool.coverage.report]
+# Fügt Regeln hinzu, um spezifische Dateien und Zeilen auszuschließen
+omit = [
+    "src/ftw_patch/ftw_patch.py:490-494", # docstringlines
+    "src/ftw_patch/ftw_patch.py:1305-1342", # if __name__ == "__main__"-Block
+]
+
+
+
+
+#
