--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
+.gitattributes export-ignore
 .gitignore export-ignore
 .vscode/ export-ignore
 gemini_spec.md export-ignore
+Api_json_exporter_configuration.md export-ignore
+Api_json_exporter_Makefileziele.md export-ignore
