build: integrate setuptools-scm for dynamic versioning
- Added setuptools-scm to build-system requirements in pyproject.toml
- Configured setuptools-scm to derive version from git tags
- Updated project metadata to use dynamic versioning

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 gemini_spec.md export-ignore
 Api_json_exporter_configuration.md export-ignore
 Api_json_exporter_Makefileziele.md export-ignore
+doc/source/api_json_exporter.py export-ignore
