--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,5 +59,6 @@
             "behavior": "region",
             "highlightColor": "#2ecc71"
         }
-    }
+    },
+    "git.followTagsWhenSync": true
 }
