build: migrate to src-layout and ftw.patch namespace
- Relocated package logic to src/ftw/patch for better isolation.
- Implemented namespace-package structure for future scalability.
- Updated all imports from ftw_patch to ftw.patch (absolute imports).
- Adjusted setuptools_scm and pyproject.toml for new directory structure.
- Verified 100% test coverage (51 tests passed).
- Confirmed get_started script execution in new environment.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,11 @@ include-package-data = true
 
 [tool.setuptools.packages.find]
 where = ["src"]
+include = ["ftw*"]
+namespaces = true
 
 [tool.setuptools_scm]
-write_to = "src/ftw_patch/_version.py"
+write_to = "src/ftw/patch/_version.py"
 
 [project]
 name = "ftw-patch"
@@ -87,7 +89,7 @@ testpaths = [
 
 [tool.coverage.run]
 omit = [
-    "src/ftw_patch/_version.py",
+    "src/ftw/patch/_version.py",
 ]
 
 
