build(docs): purge generated stubs and update build infrastructure
- Removed auto-generated API stubs from version control to eliminate redundancy.
- Updated .gitignore to exclude 'doc/source/devel/api/' and Esbonio cache artifacts.
- Configured Makefile to support 'dirhtml' builds for cleaner URL structures.
- Adjusted VS Code settings.json to optimize stability for local previews.

Why: Tracking generated files led to cluttered commits and potential merge
conflicts. This change ensures a "source-only" repository.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,24 @@
 venv
+.venv
+
 *.egg-info
 .pytest_cache
 __pycache__
+
+.mypy_cache
+
+# Sphinx generated files
 doc/build
-doc/doc
+
+# Doctest generated files
 doc/source/devel/testhome
 .coverage
+
+# Build generated files
 dist
-src/ftw_patch/_version.py
+
+# Setupzools.scm generated file
 src/ftw/patch/_version.py
+
+# Autosummary generated files
+doc/source/devel/api/
