test(infra): add tox for environment automation and PyPI build support
- Integrated tox.ini for automated testing across Python 3.10-3.15.
- Configured tox to use dependencies directly from pyproject.toml extras.
- Added 'build' environment for standardized wheel/sdist generation.

--- a/.gitignore
+++ b/.gitignore
@@ -9,16 +9,21 @@ __pycache__
 
 # Sphinx generated files
 doc/build
+.coverage
 
 # Doctest generated files
-doc/source/devel/testhome
-.coverage
+doc/source/devel/testhome/.config
+
 
 # Build generated files
 dist
+build
 
-# Setupzools.scm generated file
+# Setuptools.scm generated file
 src/ftw/patch/_version.py
 
 # Autosummary generated files
 doc/source/devel/api/
+
+# Backuped Files
+*.bak
