--- a/tox.ini
+++ b/tox.ini
@@ -2,9 +2,10 @@
 # Test-Matrix von 3.11 bis 3.15
 envlist = py311, py312, py313, py314, py315
 minversion = 4.0
+isolated_build = True
 
 [testenv]
-description = Run tests with pytest
+description = Run pytest with dependencies from pyproject.toml
 # Hier nutzen wir deine optionalen Abhängigkeiten aus der pyproject.toml
 extras = 
     test
@@ -25,3 +26,16 @@ ignore_outcome = true
 description = Run ruff linter
 extras = lint
 commands = ruff check src
+
+[testenv:build]
+description = Build sdist and wheel for PyPI upload
+skip_install = true
+deps =
+    build
+    twine
+allowlist_externals =
+    rm
+commands =
+    rm -rf dist/ build/ *.egg-info
+    python -m build
+    twine check dist/*
