--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ package = wheel
 wheel_build_env = .pkg
 commands =
     # Wir nutzen pytest mit den Pfaden aus deiner pyproject.toml
-    pytest --cov=ftw.patch --cov-branch --cov-report=html --cov-report=term-missing
+    pytest --cov=ftw.patch --cov-branch --cov-report=html:htmlcov/{envname} --cov-report=term-missing
     #pytest {posargs}
 
 [testenv:py314]
