--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,7 +62,9 @@ doc = [
 ]
 test = ["pytest", "pytest-mock", "pytest-cov"]
 lint = ["ruff"]
-dev = ["ftw-patch[test,doc,lint]"]
+dev = ["ftw-patch[test,doc,lint]",
+    "esbonio==0.16.5",
+    ]
 
 
 [[project.authors]]
