docs: implement sphinx documentation structure
- Added index.rst with project badges and toctree
- Integrated autoprogram for CLI documentation
- Added Unicode-safe usage examples (pre/post includes)
- Configured setuptools-scm for dynamic versioning in conf.py
- Added GPLv2/CC licenses and initial changelog

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,5 +77,8 @@
     // In v0.11.0 war dieser Pfad oft entscheidend:
     "esbonio.sphinx.buildDir": "${workspaceFolder}/doc/build/html",
     "esbonio.server.logLevel": "debug",
-    "python.defaultInterpreterPath": "dein/pfad/zum/venv/bin/python"
+    "python.defaultInterpreterPath": "dein/pfad/zum/venv/bin/python",
+    "files.associations": {
+        "*.rst.inc": "restructuredtext"
+    }
 }
