style: refactor CSS architecture and centralize color management
This commit consolidates the styling logic and establishes a
single source of truth for the project's visual identity.

Key changes:
- Centralized all color definitions in 'colors.css' using CSS variables.
- Implemented a unified color palette based on ISO 7010 (RAL) standards
  for admonitions (red, yellow, blue, green).
- Cleaned up 'ui_elements.css' by replacing hardcoded hex values with
  references to the central color variables.
- Added layout structures for the upcoming Roadmap and Changelog
  sections (.roadmap-next, .roadmap-planned).
- Removed obsolete variables like '--ui-active-color' to reduce overhead.
- Enhanced dark mode support by synchronizing variable mappings across
  all UI components.

This refactoring ensures that future branding adjustments (e.g.,
changing the primary 'Heros' blue) only need to be applied in
one central location.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -19,7 +19,7 @@ help:
 htmlpure:
 	@$(SPHINXBUILD) -M html "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
-html: 
+html: clean
 	@$(SPHINXBUILD) -M coverage "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 	@$(SPHINXBUILD) -M dirhtml "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
