--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,12 @@ minversion = 4.0
 isolated_build = True
 
 [testenv]
+passenv =
+    SETUPTOOLS_SCM_PRETEND_VERSION
+    GIT_AUTHOR_NAME
+    GIT_AUTHOR_EMAIL
+    GITHUB_*
+    
 description = Run pytest with dependencies from pyproject.toml
 # Hier nutzen wir deine optionalen Abhängigkeiten aus der pyproject.toml
 extras = 
