build: centralize CI/CD logic using tox and makefile
- tox.ini: Added environments for isolated builds and package checking (twine)
- .github/workflows/ci.yml: Simplified workflow to use tox and make commands
- Makefile: Refactored 'deploy' and 'test-deploy' to use tox for build verification
- Infrastructure: Unified build process across local dev, GitHub Actions, and RTD

--- a/tox.ini
+++ b/tox.ini
@@ -12,16 +12,12 @@ passenv =
     GITHUB_*
     
 description = Run pytest with dependencies from pyproject.toml
-# Hier nutzen wir deine optionalen Abhängigkeiten aus der pyproject.toml
 extras = 
     test
-# Dies stellt sicher, dass das Paket vor dem Testen korrekt gebaut wird
 package = wheel
 wheel_build_env = .pkg
 commands =
-    # Wir nutzen pytest mit den Pfaden aus deiner pyproject.toml
     pytest --cov=ftw.patch --cov-branch --cov-report=html:htmlcov/{envname} --cov-report=term-missing
-    #pytest {posargs}
 
 [testenv:py314]
 ignore_outcome = true
@@ -40,9 +36,8 @@ skip_install = true
 deps =
     build
     twine
-allowlist_externals =
-    rm
+
 commands =
-    rm -rf dist/ build/ *.egg-info
+    python -c 'import shutil; [shutil.rmtree(p, ignore_errors=True) for p in ["dist", "build"]]'
     python -m build
     twine check dist/*
