build: allow -test suffix in git tags for setuptools_scm

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ namespaces = true
 
 [tool.setuptools_scm]
 write_to = "src/ftw/patch/_version.py"
+tag_regex = '^(?P<prefix>v)?(?P<version>[^\+|-]+)(?P<suffix>-test)?$'
 
 [project]
 name = "ftw-patch"
