docs: fix dependencies and theme for Read the Docs
- Add sphinx-argparse to fix 'sphinxarg' ModuleNotFoundError
- Add missing autoclasstoc and sphinx-book-theme to pyproject.toml
- Sync extensions in conf.py with pyproject.toml
- Remove unused sphinxcontrib-mermaid/plantuml to streamline build

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,13 +53,11 @@ doc = [
     "sphinx",
     "sphinx-argparse",
     "autoclasstoc",
-    "python-docs-theme",
-    "sphinxcontrib-mermaid",
-    "sphinxcontrib-plantuml",
+    "sphinx-book-theme",
     "sphinx-copybutton",
-    "sphinx-rtd-theme",
     "sphinx-design",
 ]
+
 test = ["pytest", "pytest-mock", "pytest-cov"]
 lint = ["ruff"]
 dev = ["ftw-patch[test,doc,lint]",
