--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -15,7 +15,7 @@ python:
     - method: pip
       path: .
       extra_requirements:
-        - docs  
+        - doc  
 
 # Deine Sphinx-Konfiguration
 sphinx:
