chore: finalize v0.3.0 namespace migration
- All tests passed with 100% coverage on Python 3.11 - 3.15
- Namespace 'fitzzftw' fully implemented in code and docs
- Ready for official 0.3.0 release

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ dist
 build
 
 # Setuptools.scm generated file
-src/ftw/patch/_version.py
+src/fitzzftw/patch/_version.py
 
 # Autosummary generated files
 doc/source/devel/api/
