--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ extras =
 package = wheel
 wheel_build_env = .pkg
 commands =
-    pytest --cov=ftw.patch --cov-branch --cov-report=html:htmlcov/{envname} --cov-report=term-missing
+    pytest --cov=fitzzftw.patch --cov-branch --cov-report=html:htmlcov/{envname} --cov-report=term-missing
 
 [testenv:py314]
 ignore_outcome = true
