--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
     needs: test
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
+    environment: ${{ contains(github.ref, '-test') && 'testpypi' || 'pypi' }}
     permissions:
       id-token: write
     steps:
